[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/BulletBill.gd" type="Script" id=1]
[ext_resource path="res://Enemies/gfxBulletBill/BulletBill.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyVisibilityNotifier.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="BulletBill" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="KinematicCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="enemie_hitbox" type="Area2D" parent="."]
scale = Vector2( 0.8, 0.6 )
collision_layer = 8
collision_mask = 2

[node name="hitbox_collision" type="CollisionShape2D" parent="enemie_hitbox"]
z_index = 1
shape = SubResource( 2 )

[node name="EnemyVisibilityNotifier" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="enemie_hitbox" to="." method="_on_enemie_hitbox_area_entered"]
